[gd_scene load_steps=4 format=3 uid="uid://wukglpblg5ii"]

[ext_resource type="Script" uid="uid://neeoeuojftsj" path="res://scripts/main_menu.gd" id="1_ekxnf"]
[ext_resource type="AudioStream" uid="uid://bl0y83wr3jou" path="res://audio/03 unsolved crimes .wav" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://4c8fu366xnll" path="res://textures/dossier.png" id="3_bqqt6"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekxnf")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_l6cm7")
autoplay = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -225.0
offset_right = 167.0
grow_vertical = 0
theme_override_constants/separation = 10

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.972549, 0.694118, 0.270588, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 20
text = "Play"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.972549, 0.694118, 0.270588, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 20
text = "Credits"

[node name="GICJ" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.972549, 0.694118, 0.270588, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 20
text = "GIC Jam"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.972549, 0.694118, 0.270588, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 20
text = "Quit
"

[node name="Banner" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_bqqt6")

[node name="Label" type="Label" parent="Banner"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -101.5
offset_top = -33.0
offset_right = 101.5
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.712, 0.28, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "PRESS ANY KEY TO CONTINUE."

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/GICJ" to="." method="_on_gicj_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
